overflow in chome and edge fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ video{
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar{
